# sysprims

./: .gitignore  .yamlfmt  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING-alternate.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.container  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPOSITORY_SAFETY_PROTOCOLS.md  SAFETY.md  cargo.toml  cbindgen.toml  deny.toml  go.mod  go.work  package.json
.github/: actionlint.yaml
.github/workflows/: ci.yml  go-bindings.yml  release.yml  typescript-bindings.yml  typescript-napi-prebuilds.yml  typescript-npm-publish.yml  validate-release.yml
.goneat/: assess.yaml  dependencies.yaml  hooks.yaml  tools.yaml
bindings/go/sysprims/: README.md  cgo_darwin_amd64.go  cgo_darwin_amd64_shared.go  cgo_darwin_amd64_shared_local.go  cgo_darwin_arm64.go  cgo_darwin_arm64_shared.go  cgo_darwin_arm64_shared_local.go  cgo_linux_amd64.go  cgo_linux_amd64_musl.go  cgo_linux_amd64_musl_shared.go  cgo_linux_amd64_musl_shared_local.go  cgo_linux_amd64_shared.go  cgo_linux_amd64_shared_local.go  cgo_linux_arm64.go  cgo_linux_arm64_musl.go  cgo_linux_arm64_musl_shared.go  cgo_linux_arm64_musl_shared_local.go  cgo_linux_arm64_shared.go  cgo_linux_arm64_shared_local.go  cgo_windows_amd64.go  cgo_windows_amd64_shared.go  cgo_windows_amd64_shared_local.go  error.go  go.mod  proc.go  session.go  signal.go  signals_unix.go  signals_windows.go  spawn.go  sysprims.go  sysprims_test.go  timeout.go
bindings/typescript/sysprims/: .gitignore  LICENSE  README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
bindings/typescript/sysprims/native/: Cargo.toml
bindings/typescript/sysprims/native/src/: lib.rs
config/agentic/roles/: README.md  cicd.yaml  deliverylead.yaml  devlead.yaml  infoarch.yaml  qa.yaml  releng.yaml  secrev.yaml
crates/sysprims-cli/: Cargo.toml
crates/sysprims-cli/src/: main.rs
crates/sysprims-cli/tests/: kill.rs  logging.rs  pstat.rs  timeout.rs
crates/sysprims-core/: Cargo.toml
crates/sysprims-core/src/: error.rs  lib.rs  schema.rs
crates/sysprims-proc/: Cargo.toml
crates/sysprims-proc/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/sysprims-proc/tests/: fds.rs  port_bindings.rs
crates/sysprims-session/: Cargo.toml  README.md
crates/sysprims-session/src/: lib.rs  unix.rs
crates/sysprims-session/tests/: behavioral_comparison.rs
crates/sysprims-signal/: Cargo.toml
crates/sysprims-signal/src/: lib.rs  unix.rs  windows.rs
crates/sysprims-signal/tests/: integration.rs  privileged.rs
crates/sysprims-timeout/: Cargo.toml
crates/sysprims-timeout/src/: lib.rs  unix.rs  windows.rs
crates/sysprims-timeout/tests/: privileged.rs  tree_escape.rs
docs/appnotes/: README.md
docs/appnotes/fds-validation/: README.md  synthetic-fd-holder.sh  validate-fds.sh
docs/appnotes/multi-pid-kill/: README.md  cpu-spinner.sh  spawn-workers.sh
docs/architecture/: README.md  sysprims-architecture-overview.md
docs/architecture/adr/: 0000-adr-process.md  0001-license-policy.md  0002-crate-structure.md  0004-ffi-design.md  0006-dependency-governance.md  0007-platform-abstraction.md  0008-error-handling.md  0009-logging-strategy.md  0011-pid-validation-safety.md  0012-language-bindings-distribution.md  0013-release-asset-publishing-and-verification.md  0014-ffi-artifact-groups-and-binding-consumers.md  README.md  adr-template.md
docs/decisions/: ADR-0001-license-policy.md  ADR-0002-crate-structure.md  ADR-0003-group-by-default.md  ADR-0004-ffi-design.md  ADR-0005-schema-contracts.md  ADR-0006-dependency-governance.md  ADR-0007-platform-abstraction.md  ADR-0008-error-handling.md  ADR-0009-logging-strategy.md  ADR-0010-schema-management-and-versioning.md  ADR-0011-pid-validation-safety.md  ADR-0012-language-bindings-distribution.md  ADR-0013-release-asset-publishing-and-verification.md  ADR-0014-ffi-artifact-groups-and-binding-consumers.md  ADR-0015-typescript-npm-publishing.md  README.md  adr-template.md  ddr-template.md  sdr-template.md
docs/design/: README.md
docs/design/sysprims-cli/: cli-compliance.md  cli-equivalence-tests.md  cli-provenance.md  cli-spec.md
docs/design/sysprims-proc/: proc-compliance.md  proc-equivalence-tests.md  proc-provenance.md  proc-spec.md
docs/design/sysprims-session/: session-compliance.md  session-equivalence-tests.md  session-provenance.md  session-spec.md
docs/design/sysprims-signal/: signal-compliance.md  signal-equivalence-tests.md  signal-provenance.md  signal-spec.md
docs/design/sysprims-timeout/: timeout-compliance.md  timeout-equivalence-tests.md  timeout-provenance.md  timeout-spec.md
docs/developer/: logging-guide.md
docs/guides/: development.md  language-bindings.md  port-bindings-getting-started.md  process-intelligence-without-shell-outs.md  releasing.md  replace-shell-outs-go.md  runaway-process-diagnosis.md  supervisor-integration.md  testing.md
docs/one-pagers/: go-team-adoption-v0.1.14.md
docs/ops/: README.md  npm-publishing.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
docs/safety/: signal-dispatch.md
docs/security/suppressions/: lint.md
docs/standards/: code-standards.md  module-design-sop.md  platform-support.md  quality-gates.md  release-asset-policy.md  repository-conventions.md  schema-contracts.md  schema-validation-policy.md
docs/templates/module-design/: README.md  compliance-template.md  equivalence-tests-template.md  provenance-template.md  spec-template.md
ffi-libs/: sysprims.h
ffi/sysprims-ffi/: Cargo.toml
ffi/sysprims-ffi/src/: error.rs  lib.rs  proc.rs  session.rs  signal.rs  spawn.rs  timeout.rs
internal/gowork/: doc.go
schemas/process/v1.0.0/: descendants-result.schema.json  fd-filter.schema.json  (+11 more)
scripts/: container-test-runner.sh  download-release-assets.sh  export-release-keys.sh  generate-checksums.sh  sign-release-assets.sh  upload-release-assets.sh  verify-public-keys.sh  verify-signatures.sh
(+18 files in other folders)
