[workspace]
resolver = "2"
members = [
    "crates/sysprims-core",
    "crates/sysprims-timeout",
    "crates/sysprims-signal",
    "crates/sysprims-session",
    "crates/sysprims-proc",
    "crates/sysprims-cli",
    "ffi/sysprims-ffi",
    "bindings/typescript/sysprims/native",
]

[workspace.package]
version = "0.1.8"
edition = "2021"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/3leaps/sysprims"
authors = ["3leaps Architecture Council"]

[workspace.dependencies]
sysprims-core = { path = "crates/sysprims-core" }
sysprims-timeout = { path = "crates/sysprims-timeout" }
sysprims-signal = { path = "crates/sysprims-signal" }
sysprims-proc = { path = "crates/sysprims-proc" }
sysprims-session = { path = "crates/sysprims-session" }

# Fulmen Ecosystem
# NOTE: Pinned to ensure stable semantics across bindings and avoid accidental
# API changes before sysprims v0.1.0 ships.
# See .plans/active/v0.1.0/release-checklist.md
rsfulmen = { version = "=0.1.2", default-features = false, features = ["foundry-core"] }

# Core Platform Abstractions
libc = "0.2"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

# Minimal Tier Serialization & Time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] } # Replaces Chrono

# Feature-gated Observability
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

# CLI Dependencies
clap = { version = "4.5", features = ["derive", "env"] }

# Error Handling
thiserror = "1.0"
