[package]
name = "sysprims-timeout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Process timeout with group-by-default tree management"

[dependencies]
sysprims-core.workspace = true

[dev-dependencies]
sysprims-signal.workspace = true
