[package]
name = "sysprims-timeout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Process timeout with group-by-default tree management"

[features]
default = []
# Enables tests that require container isolation (tree-kill verification)
privileged-tests = []
# Enables tests that require multiple user accounts
cross-user-tests = []

[dependencies]
sysprims-core.workspace = true
sysprims-signal.workspace = true
rsfulmen = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
sysprims-session = { workspace = true }
