[package]
name = "sysprims-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "C-ABI exports for sysprims"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
sysprims-core.workspace = true
