[package]
name = "sysprims-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "C-ABI exports for sysprims"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
sysprims-core.workspace = true
sysprims-signal.workspace = true
sysprims-proc.workspace = true
sysprims-session.workspace = true
sysprims-timeout.workspace = true
serde.workspace = true
serde_json.workspace = true
